test/checks/httpRouteWildcardOrEmptyHost/failure.empty.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: every-host
spec:
  rules:
  - backendRefs:
    - name: api
      port: 8080
