test/checks/httpRouteWildcardOrEmptyHost/failure.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wildcard-host
spec:
  hostnames:
  - "*.example.com"
  rules:
  - backendRefs:
    - name: api
      port: 8080
